# app/api_components/admin/v1/schemas/admin_user_fleets.rb
@@ -1,0 +1,18 @@
+# frozen_string_literal: true
+
+module Admin
+  module V1
+    module Schemas
+      class AdminUserFleets < ::Shared::V1::Schemas::BaseList
+        include Rswag::SchemaComponents::Component
+
+        schema({
+          properties: {
+            items: {type: :array, items: {"$ref": "#/components/schemas/AdminUserFleet"}}
+          },
+          required: %w[items]
+        })
+      end
+    end
+  end
+end
